# lukai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  turbo.json
apps/agent/: MISTRAL_OCR_README.md  README.md  env.example  nixpacks.toml  package.json  pyproject.toml  railway.json  test_real_pdf.py
apps/agent/apolo-py/: bruno.json  post doc to whatsapp.bru  post image to whatsapp.bru  post to apolo.bru  post to extract.bru  post to language.bru  post to query.bru  post to whatsapp.bru
apps/agent/app/: main.py
apps/agent/app/api/v1/endpoints/: webhooks.py
apps/agent/app/core/: analytics.py  config.py
apps/agent/app/schemas/: api_responses.py
apps/agent/app/services/: apolo_free_trial_prompt_formatter.py  apolo_free_trial_service.py  apolo_langgraph_service.py  apolo_langgraph_tools.py  apolo_service.py  apolo_subscription_prompts.py  apolo_subscription_services.py  lukai_free_langgraph_service.py  lukai_free_prompt_formatter.py  main_api_service.py  mistral_service.py  postgres_checkpointer_service.py  prompt_formatter.py  tools.py  whatsapp_service.py
apps/agent/app/utils/: chat_storage.py  error_handler.py  media_modifier.py  transcribe.py
apps/backend/: env.example  package.json
apps/backend/apolo/: bruno.json  hello.bru  send message.bru
apps/backend/apolo/admin/: create income category.bru  upload image.bru
apps/backend/apolo/crons/: monthly snapshot.bru
apps/backend/apolo/environments/: local.bru
apps/backend/apolo/scripts/: generate-master-key.js
apps/backend/prisma/: schema.prisma
apps/backend/src/: api.ts  env.ts  index.ts  load-env.ts
apps/backend/src/lib/: prisma.ts
apps/backend/src/utils/: encryption.ts  handleError.ts  model-encryption.ts  upsertUser.ts
apps/mobile/: app.json  env.example  env.ts  global.css  metro.config.js  package.json  tailwind.config.js
apps/mobile/android/: settings.gradle
apps/mobile/app/: +not-found.tsx  _layout.tsx  login.tsx
apps/mobile/components/: SubscriptionStatusSimple.tsx  audio-recorder.tsx
apps/mobile/hooks/: use-analytics.ts  use-screen-capture.ts  use-transactions.ts
apps/mobile/ios/: Podfile
apps/mobile/lib/: Dayjs.ts  backgroundTask.ts  constants.ts  encryption.ts  secureStore.ts
apps/mobile/types/: index.ts
apps/web/: README.md  env.example  env.ts  next.config.js  package.json  tailwind.config.js  vercel.json
apps/web/.next/: trace
apps/web/app/: layout.tsx
apps/web/bruno/: Monthly snapshot.bru  bruno.json  send otp.bru  send template with facebook.bru
apps/web/public/: privacy.html  terms.html
apps/web/styles/: globals.css
apps/web/types/: index.ts
docs/: environment-setup.md
ee/: LICENSE  README.md
ee/features/analytics/: README.md
ee/features/white-label/: README.md
(+263 files in other folders)
